<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/prefTituloCategoria1">
        <EditTextPreference
            android:key="player_name"
            android:title="@string/prefTituloNombreJugador"
            android:summary="@string/prefTextoNombreJugador"
            android:inputType="text" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefTituloCategoria2">
        <EditTextPreference
            android:key="initial_number_of_seeds"
            android:title="Numero inicial de semillas"
            android:summary="Cambia el numero de semillas en cada hueco"
            android:inputType="number"
            android:defaultValue="4" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefTituloCategoria3">
        <!-- Más información -->
    </PreferenceCategory>

</PreferenceScreen>