<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TableLayout
        android:id="@+id/tableLayoutBestScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:text="@string/txtMejoresResultadosJugador"
                android:padding="8dp"
                android:textStyle="bold" />
            <TextView
                android:text="@string/txtMejoresResultadosPuntuacion"
                android:padding="8dp"
                android:textStyle="bold"
                android:gravity="center" />
            <TextView
                android:text="@string/txtMejoresResultadosFecha"
                android:padding="8dp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonDeleteAllScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDialogoEliminarResultadosBoton" />

</LinearLayout>